--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -28,6 +28,20 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-styles/paper-styles-classes.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
+<link rel="import" href="../bower_components/paper-radio-group/paper-radio-group.html">
+<link rel="import" href="../bower_components/paper-radio-button/paper-radio-button.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../bower_components/paper-input/paper-input-container.html">
+<link rel="import" href="../bower_components/paper-input/paper-input-error.html">
+<link rel="import" href="../bower_components/paper-input/paper-input-char-counter.html">
+<link rel="import" href="../bower_components/paper-input/paper-textarea.html">
+<link rel="import" href="../bower_components/paper-styles/color.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="../bower_components/paper-slider/paper-slider.html">
+<link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../bower_components/paper-ripple/paper-ripple.html">
 
 <!-- Google Web Components -->
 <link rel="import" href="../bower_components/google-chart/google-chart.html">
@@ -52,5 +66,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="my-greeting/my-greeting.html">
-<link rel="import" href="my-list/my-list.html">
+
+<link rel="import" href="pa-table.html">
+<link rel="import" href="pa-todo.html">
+
+<link rel="import" href="widgets/pa-leaflet.html">
+<link rel="import" href="widgets/pa-buttons.html">
+<link rel="import" href="widgets/pa-paper-fab.html">
+<link rel="import" href="widgets/pa-sliders.html">
+<link rel="import" href="widgets/pa-toggle-buttons.html">
+<link rel="import" href="widgets/pa-checkboxes.html">
+<link rel="import" href="widgets/pa-radio-buttons.html">
+<link rel="import" href="widgets/pa-text-inputs.html">
+<link rel="import" href="widgets/pa-inputs-validation.html">
+
+<link rel="import" href="pages/pa-charts.html">
+<link rel="import" href="pages/pa-dashboard.html">
+<link rel="import" href="pages/pa-form-elements.html">
+<link rel="import" href="pages/pa-maps.html">
+<link rel="import" href="pages/pa-tables.html">
+<link rel="import" href="pages/pa-ui-elements.html">
+<link rel="import" href="pages/pa-user-profile.html">
